3B - update style admin-return / admin-return-detail

--- a/3B-NEW/admin-return-detail.html
+++ b/3B-NEW/admin-return-detail.html
@@ -390,7 +390,7 @@
 			<section class="content-header">
 				<ol class="breadcrumb">
 					<li><a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-					<li class="active">Quản lý trả hàng</li>
+					<li class="active">Chi tiết trả hàng</li>
 				</ol>
 			</section>
 			<!-- /END CONTENT HEADER -->
@@ -402,16 +402,30 @@
 					<form action="#" role="form">
 						<div class="box-header">
 							<h3 class="box-title">
-								Quản lý trả hàng
+								Chi tiết trả hàng
 							</h3>
 						</div>
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
-								<div class="col-md-8">
+								<div class="col-md-6">
+									<div class="name-store">
+										<img src="assets/images/img3.jpg" class="object-fit pull-left">
+										<h4>Store name with long long long long text</h4>
+										<div class="clearfix"></div>
+									</div>
 									<div class="return-p">
 										<img src="assets/images/svg/image-temp.svg" class="object-fit pull-left">
-										<h4>Giầy thể thao</h4>
+										<div class="p-info pull-left">
+											<div class="name margin-b3">Korean Style Coat - High Quality Product </div>
+											<div class="price">
+												<span class="text-red">$146,99</span>
+												<span class="sale">$180,00</span>
+											</div>
+										</div>
+										<div class="p-quality pull-right">
+											<span>X1</span>
+										</div>
 										<div class="clearfix"></div>
 									</div>
 									<div class="return-u">
