--- a/3B-NEW/admin-return.html
+++ b/3B-NEW/admin-return.html
@@ -408,10 +408,10 @@
 						<!-- BEGIN BOX BODY -->
 						<div class="box-body">
 							<div class="row">
-								<div class="col-md-3">
+								<div class="col-md-6">
 									<div class="input-group">
 										<span class="input-group-addon"><i class="fa fa-search"></i></span>
-										<input type="text" class="form-control" placeholder="Tìm kiếm thông tin">
+										<input type="text" class="form-control" placeholder="email, số điện thoại, tên đăng nhập, họ tên, mã yêu cầu của user ">
 									</div>
 								</div>
 								<div class="clearfix"></div>
