3B - add style chat box

--- a/3B-WEB/chatbox-no-message.html
+++ b/3B-WEB/chatbox-no-message.html
@@ -638,165 +638,14 @@
 							<header>
 								<input type="text" class="form-control" placeholder="Search">
 							</header>
-							<ul class="cus-scroll">
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img29.jpg" class="object-fit">
-											<span class="status orange"></span>
-											<span class="msg-unread">10</span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg unread">Buzz</h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li class="active">
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-							</ul>
 						</aside>
 
 						<main>
-							<header>
-								<img src="assets/images/img29.jpg" class="object-fit pull-left">
-								<div class="p-info pull-left">
-									<div class="name">Korean Style Coat - High Quality Product </div>
-									<div class="price">
-										<span class="txt-red">$146,99</span>
-										<span class="sale">$180,00</span>
-									</div>
-								</div>
-								<div class="clearfix"></div>
-							</header>
 							<div class="content-chat">
-								<ul class="cus-scroll">
-									<li class="me">
-										<div class="message">
-											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-										</div>
-										<div class="clearfix"></div>
-									</li>
-									<li class="you">
-										<div class="ava pull-left">
-											<img src="assets/images/img30.jpg" class="object-fit">
-										</div>
-										<div class="message">
-											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-										</div>
-										<div class="clearfix"></div>
-									</li>
-									<li class="you">
-										<div class="ava pull-left">
-											<img src="assets/images/img30.jpg" class="object-fit">
-										</div>
-										<div class="message">
-											What're you doing?
-										</div>
-										<div class="clearfix"></div>
-									</li>
-									<li class="time">
-										<span>20:41  2020 - 10 - 10</span>
-									</li>
-									<li class="me">
-										<div class="message">
-											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-											<img class="seen" src="assets/images/svg/checker.svg">
-										</div>
-										<div class="clearfix"></div>
-									</li>
-									<li class="you">
-										<div class="ava pull-left">
-											<img src="assets/images/img30.jpg" class="object-fit">
-										</div>
-										<div class="message">
-											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-											<img class="seen" src="assets/images/svg/checker.svg">
-										</div>
-										<div class="clearfix"></div>
-									</li>
-								</ul>
+								<center>
+									<img src="assets/images/chatbox-no-message.png">
+								</center>
 							</div>
-							<footer>
-								<ul>
-									<li><span>Helllo, Items exit??</span></li>
-									<li><span>Thanks alot!!!!!!!!!!</span></li>
-									<li><span>Very nice model </span></li>
-								</ul>
-								<div class="send">
-									<div class="emotions pull-left"><img src="assets/images/svg/icon_emotion.svg"></div>
-									<div class="input-group">
-										<input type="text" name="message" placeholder="Type Message ..." class="form-control">
-										<span class="input-group-btn">
-											<button type="submit" class="btn btn-default">Send</button>
-										</span>
-									</div>
-								</div>
-							</footer>
 						</main>
 					</div>
 					<!-- /END TAB -->
@@ -807,41 +656,12 @@
 							<header>
 								<input type="text" class="form-control" placeholder="Search">
 							</header>
-							<ul class="cus-scroll">
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img29.jpg" class="object-fit">
-											<span class="status orange"></span>
-											<span class="msg-unread">10</span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg unread">Buzz</h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product</h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-							</ul>
 						</aside>
 
 						<main>
 							<div class="content-chat">
 								<center>
-									<img src="assets/images/chatbox-unread.png">
+									<img src="assets/images/chatbox-no-message.png">
 								</center>
 							</div>
 						</main>
