--- a/3B-WEB/chatbox-search.html
+++ b/3B-WEB/chatbox-search.html
@@ -649,19 +649,7 @@
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
 											<h4 class="msg unread">Buzz</h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li class="active">
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<span class="shopname">Shop name</span>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -674,7 +662,8 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
+											<span class="shopname">Shop name</span>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -683,37 +672,11 @@
 									<div class="contact">
 										<div class="ava">
 											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
-										</div>
-										<div class="clearfix"></div>
-									</div>
-								</li>
-								<li>
-									<div class="contact">
-										<div class="ava">
-											<img src="assets/images/img30.jpg" class="object-fit">
-											<span class="status green"></span>
-										</div>
-										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
+											<span class="shopname">Shop name</span>
 										</div>
 										<div class="clearfix"></div>
 									</div>
