--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -78,8 +78,10 @@
 				<div class="col-md-6">
 					<h5>FLASH SALE - Phase 6</h5>
 					<ul>
-						<li><a href="flash-sale.html">Flash Sale</a></li>
+						<li><a href="flash-sale.html">Flash Sale - Chatbox</a></li>
 						<li><a href="flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
+						<li><a href="chatbox-search.html">Chatbox - Search</a></li>
+						<li><a href="chatbox-no-message.html">Chatbox - No message</a></li>
 					</ul>
 				</div>
 			</div>
