--- a/3B-NEW/seller-wallet3b.html
+++ b/3B-NEW/seller-wallet3b.html
@@ -262,7 +262,7 @@
 							<div class="col-md-3">
 								<div class="body-item">
 									<div class="title">Wallet Balance</div>
-									<div class="balance">$500.00</div>
+									<div class="balance">300,738,755 đ</div>
 								</div>
 							</div>
 							<div class="col-md-3">
