3B - add view categories and menu-bar

--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -260,7 +260,110 @@
 	<div class="content main-header">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-2 menu">
+
+				<div class="col-md-12">
+					<ul class="menu-container">
+						<li class="icon"><a href="view-all-categories.html"><img src="assets/images/svg/menu-bar.svg"></a></li>
+						<li>
+							<a href="view-product-by-category.html">Electronic Devices <i class="fa fa-angle-down"></i></a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="view-product-by-category.html">Sport shoes</a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#">TV & Appiliantion <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#">Men <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#">Women <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#">Baby & Kids <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#">Home & Funiture <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#">Sport, Book & More <i class="fa fa-angle-down"></i></a></li>
+					</ul>
+				</div>
+				<div class="clearfix"></div>
+
+				<!-- <div class="col-md-2 menu">
 					<ul>
 						<li class="main-title">Categories</li>
 						<li><a href="#">Electronic Devices <i class="fa fa-angle-right pull-right"></i></a></li>
@@ -276,7 +379,7 @@
 				</div>
 				<div class="col-md-10">
 					<img src="assets/images/banner.png">
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
