--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -78,6 +78,9 @@
 				<div class="col-md-6">
 					<h5>FLASH SALE - Phase 6</h5>
 					<ul>
+						<li><a href="home.html">Homepage Menu</a></li>
+						<li><a href="view-product-by-category.html">View Product By Category</a></li>
+						<li><a href="view-all-categories.html">View All Categories</a></li>
 						<li><a href="flash-sale.html">Flash Sale - Chatbox</a></li>
 						<li><a href="flash-sale-upcoming.html">Flash Sale Upcoming</a></li>
 						<li><a href="chatbox-search.html">Chatbox - Search</a></li>
