3B - add Admin setting chat

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -342,6 +342,19 @@
 				</div>
 			</div>
 		</div>
+
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse6" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<h5>ADMIN</h5>
+					<ul>
+						<li><a href="admin-setting-chat.html">Admin Setting Chat</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 
 	<!-- /END WRAPPER -->
@@ -351,6 +364,7 @@
 		<li><a href="#pharse3">Pharse 3</a></li>
 		<li><a href="#pharse4">Pharse 4</a></li>
 		<li><a href="#pharse5">Pharse 5</a></li>
+		<li><a href="#pharse5">Pharse 6</a></li>
 	</ul>
 
 </body>
