--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -351,6 +351,7 @@
 					<h5>ADMIN</h5>
 					<ul>
 						<li><a href="admin-setting-chat.html">Admin Setting Chat</a></li>
+						<li><a href="admin-flash-sale-time.html">Admin Flash Sale Time</a></li>
 					</ul>
 				</div>
 			</div>
