3B - update flash sale product-details

--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -395,6 +395,18 @@
 								<span>330 items</span>
 							</div>
 							<div class="clearfix"></div>
+							<div class="flash-sale-bar">
+								<h3 class="pull-left">Fla<span><img src="assets/images/svg/flash-white.svg"></span>h Sale</h3>
+								<div class="pull-right">
+									<span class="flash-time">
+										Ends in:
+										<span class="hour">12</span> : 
+										<span class="minute">46</span> : 
+										<span class="second">34</span>
+									</span>
+								</div>
+								<div class="clearfix"></div>
+							</div>
 						</div>
 					</div>
 
