3B - small change style flash-sale and view-product-by-category

--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -661,7 +661,7 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -674,7 +674,7 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -687,7 +687,7 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -700,7 +700,7 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -713,7 +713,7 @@
 										</div>
 										<div class="messenger">
 											<h3 class="name">Prénom Nom</h3>
-											<h4 class="msg">You: good product <img src="assets/images/svg/checker.svg"></h4>
+											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
 									</div>
@@ -765,7 +765,6 @@
 									<li class="me">
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-											<img class="seen" src="assets/images/svg/checker.svg">
 										</div>
 										<div class="clearfix"></div>
 									</li>
@@ -775,7 +774,6 @@
 										</div>
 										<div class="message">
 											Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-											<img class="seen" src="assets/images/svg/checker.svg">
 										</div>
 										<div class="clearfix"></div>
 									</li>
