--- a/3B-WEB/view-product-by-category.html
+++ b/3B-WEB/view-product-by-category.html
@@ -425,7 +425,7 @@
 				<div class="col-md-9">
 					<!-- BEGIN TOP PRODUCTS -->
 					<div class="store-top-product">
-						<h4>Electronic devices (1.000)</h4>
+						<h4>Electronic devices</h4>
 
 						<div class="sort">
 							<span>Sort By:</span>
