--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -443,6 +443,36 @@
 											</div>
 											<!-- /END PRODUCT ITEM -->
 										</div>
+										<div class="col-5">
+											<!-- PRODUCT ITEM -->
+											<div class="product-item">
+												<a href="#">
+													<img class="p-image" src="assets/images/img13.png">
+													<span class="sale-label">-34%</span>
+												</a>
+												<div class="product-info">
+													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<div class="product-sold">
+														<div class="progress progress-xs pull-left">
+															<div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+																<span class="sr-only">80% Complete</span>
+															</div>
+														</div>
+														<span class="sold pull-right">Sold 12/30</span>
+														<div class="clearfix"></div>
+													</div>
+													<div class="product-meta">
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
+													</div>
+												</div>
+											</div>
+											<!-- /END PRODUCT ITEM -->
+										</div>
 									</div>
 									<div class="row">
 										<div class="col-md-12 txt-center">
@@ -459,18 +489,27 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img4.png">
+													<img class="p-image" src="assets/images/img13.png">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
 													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<div class="product-sold">
+														<div class="progress progress-xs pull-left">
+															<div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+																<span class="sr-only">80% Complete</span>
+															</div>
+														</div>
+														<span class="sold pull-right">Sold 12/30</span>
+														<div class="clearfix"></div>
+													</div>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
 												</div>
 											</div>
@@ -480,18 +519,27 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img5.png">
+													<img class="p-image" src="assets/images/img13.png">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
 													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<div class="product-sold">
+														<div class="progress progress-xs pull-left">
+															<div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+																<span class="sr-only">80% Complete</span>
+															</div>
+														</div>
+														<span class="sold pull-right">Sold 12/30</span>
+														<div class="clearfix"></div>
+													</div>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
 												</div>
 											</div>
@@ -501,18 +549,27 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img6.png">
+													<img class="p-image" src="assets/images/img13.png">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
 													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<div class="product-sold">
+														<div class="progress progress-xs pull-left">
+															<div class="progress-bar progress-bar-red" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+																<span class="sr-only">80% Complete</span>
+															</div>
+														</div>
+														<span class="sold pull-right">Sold 12/30</span>
+														<div class="clearfix"></div>
+													</div>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
 												</div>
 											</div>
