3B - update banner homepage - update style flash sale upcoming

--- a/3B-WEB/flash-sale-upcoming.html
+++ b/3B-WEB/flash-sale-upcoming.html
@@ -448,19 +448,20 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img4.png">
+													<img class="p-image" src="assets/images/img30.jpg">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
-													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<a href="#"><h4 class="transition">[Combo] Tã quần Bobby siêu thoáng bịch Mega ...</h4></a>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
+
 												</div>
 											</div>
 											<!-- /END PRODUCT ITEM -->
@@ -469,19 +470,20 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img5.png">
+													<img class="p-image" src="assets/images/img29.jpg">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
-													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<a href="#"><h4 class="transition">[Combo] Tã quần Bobby siêu thoáng bịch Mega ...</h4></a>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
+
 												</div>
 											</div>
 											<!-- /END PRODUCT ITEM -->
@@ -490,22 +492,72 @@
 											<!-- PRODUCT ITEM -->
 											<div class="product-item">
 												<a href="#">
-													<img src="assets/images/img6.png">
+													<img class="p-image" src="assets/images/img13.png">
 													<span class="sale-label">-34%</span>
 												</a>
 												<div class="product-info">
-													<div class="store-name">
-														<img src="assets/images/store-logo-sm.png">
-														<h5>Clever Hippo</h5>
-													</div>
-													<a href="#"><h4 class="transition">Nombined strapped backpack</h4></a>
+													<a href="#"><h4 class="transition">[Combo] Tã quần Bobby siêu thoáng bịch Mega ...</h4></a>
 													<div class="product-meta">
-														<span>$125,00</span>
-														<span class="sale">$225,00</span>
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
 													</div>
+
 												</div>
 											</div>
 											<!-- /END PRODUCT ITEM -->
+										</div>
+										<div class="col-5">
+											<!-- PRODUCT ITEM -->
+											<div class="product-item">
+												<a href="#">
+													<img class="p-image" src="assets/images/img12.png">
+													<span class="sale-label">-34%</span>
+												</a>
+												<div class="product-info">
+													<a href="#"><h4 class="transition">[Combo] Tã quần Bobby siêu thoáng bịch Mega ...</h4></a>
+													<div class="product-meta">
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
+													</div>
+
+												</div>
+											</div>
+											<!-- /END PRODUCT ITEM -->
+										</div>
+										<div class="col-5">
+											<!-- PRODUCT ITEM -->
+											<div class="product-item">
+												<a href="#">
+													<img class="p-image" src="assets/images/img29.jpg">
+													<span class="sale-label">-34%</span>
+												</a>
+												<div class="product-info">
+													<a href="#"><h4 class="transition">[Combo] Tã quần Bobby siêu thoáng bịch Mega ...</h4></a>
+													<div class="product-meta">
+														<div class="pull-left">
+															<span>$125,00</span>
+															<span class="sale">$225,00</span>
+														</div>
+														<button class="btn btn-danger pull-right">Buy Now</button>
+														<div class="clearfix"></div>
+													</div>
+
+												</div>
+											</div>
+											<!-- /END PRODUCT ITEM -->
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-12 txt-center">
+											<button class="btn btn-loadmore btn-perspective">Load more</button>
 										</div>
 									</div>
 								</div>
