--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -380,6 +380,10 @@
 				<div class="col-md-10">
 					<img src="assets/images/banner.png">
 				</div> -->
+				<div class="col-md-12">
+					<img class="banner-slider object-fit" src="assets/images/banner.png">
+				</div>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 	</div>
