3B - update side bar - place option - view-product-by-category

--- a/3B-WEB/view-product-by-category.html
+++ b/3B-WEB/view-product-by-category.html
@@ -381,6 +381,20 @@
 					</div>
 					<!-- /END SIDEBAR SALE -->
 
+					<!-- BEGIN SIDEBAR PLACE -->
+					<div class="sidebar place">
+						<h4>Place</h4>
+						<div class="custom-slb">
+							<select>
+								<option value="0">Hà Nội</option>
+								<option value="1">Hà Nội 2</option>
+								<option value="2">Hồ Chí Minh</option>
+								<option value="3">Đà Nẵng</option>
+							</select>
+						</div>
+					</div>
+					<!-- /END SIDEBAR PLACE -->
+
 					<!-- BEGIN SIDEBAR RATING -->
 					<div class="sidebar rating">
 						<h4>Rating</h4>
