3B - small update for categories list and product list

--- a/3B-NEW/admin-categories.html
+++ b/3B-NEW/admin-categories.html
@@ -396,10 +396,15 @@
 										<input type="text" id="store-name" name="store-name" class="form-control" placeholder="Tên danh mục">
 									</div>
 								</div>
+								<div class="clearfix"></div>
 								<div class="col-md-6 text-center">
 									<div class="input-group breadcrumb-cat">
 										<ul>
 											<!-- DISPLAY BREADCRUMB CATEGORIES DO NOT ADD ANYTHING HERE -->
+											<li><label style="margin-right:5px;">Đã chọn</label></li>
+											<li>
+												<span class="badge bg-blue margin break-word-cat"> Danh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 leve </span>
+											</li>
 										</ul>
 									</div>
 								</div>
