--- a/3B-NEW/admin-product-list.html
+++ b/3B-NEW/admin-product-list.html
@@ -448,7 +448,7 @@
 												Thông hơi Quảng Châu siêu mát cho bé trai và gái <span class="btn btn-default btn-xs">Chờ duyệt</span>
 											</td>
 											<td>
-												<span class="label label-danger">Thời trang Nam/Nữ <i class="fa fa-angle-double-right"></i> Áo <i class="fa fa-angle-double-right"></i> Áo sơ mi</span>
+												<span class="label label-danger break-word-cat">Thời trang Nam/Nữ <i class="fa fa-angle-double-right"></i> Áo <i class="fa fa-angle-double-right"></i> Áo sơ mi</span>
 											</td>
 											<td>
 												110,0000 <span class="sales">120,000</span>
@@ -510,7 +510,7 @@
 												Thông hơi Quảng Châu siêu mát cho bé trai và gái <span class="btn btn-default btn-xs">Đã ẩn</span>
 											</td>
 											<td>
-												<span class="label label-danger">Phụ kiện <i class="fa fa-angle-double-right"></i> Trẻ em
+												<span class="label label-danger break-word-cat">Danh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 levelDanh mục 3 leve</span>
 											</td>
 											<td>
 												110,0000 <span class="sales">120,000</span>
