3B - fix long name category at view-product-by-category

--- a/3B-WEB/view-product-by-category.html
+++ b/3B-WEB/view-product-by-category.html
@@ -286,31 +286,31 @@
 							<li>
 								<a href="store-view-product-by-category.html">
 									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
+									<h5><span class="custom-wrap-text">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-angle-right pull-right"></i></h5>
 								</a>
 							</li>
 							<li>
 								<a href="store-view-product-by-category.html">
 									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
+									<h5><span class="custom-wrap-text">Danh mục của Thúy mo</span> <i class="fa fa-angle-right pull-right"></i></h5>
 								</a>
 							</li>
 							<li>
 								<a href="store-view-product-by-category.html">
 									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
+									<h5><span class="custom-wrap-text">Computers</span> <i class="fa fa-angle-right pull-right"></i></h5>
 								</a>
 							</li>
 							<li>
 								<a href="store-view-product-by-category.html">
 									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
+									<h5><span class="custom-wrap-text">Danh mục của Thúy (có level 2,có level 3 more more more)</span> <i class="fa fa-angle-right pull-right"></i></h5>
 								</a>
 							</li>
 							<li>
 								<a href="store-view-product-by-category.html">
 									<img src="assets/images/img14.png">
-									<h5>Computers <i class="fa fa-angle-right pull-right"></i></h5>
+									<h5><span class="custom-wrap-text">Computers</span> <i class="fa fa-angle-right pull-right"></i></h5>
 								</a>
 							</li>
 						</ul>
