--- a/3B-WEB/home.html
+++ b/3B-WEB/home.html
@@ -265,12 +265,12 @@
 					<ul class="menu-container">
 						<li class="icon"><a href="view-all-categories.html"><img src="assets/images/svg/menu-bar.svg"></a></li>
 						<li>
-							<a href="view-product-by-category.html">Electronic Devices <i class="fa fa-angle-down"></i></a>
+							<a href="view-product-by-category.html"><span class="custom-wrap-1line">Electronic Devices</span> <i class="fa fa-angle-down"></i></a>
 							<div class="menu-sub">
 								<div class="sub-row">
 									<ul class="sub-items">
-										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
-										<li><a href="view-product-by-category.html">Sport shoes</a></li>
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-caret-right"></i></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
 										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
 										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
 										<li><a href="#">Fomal shoes</a></li>
@@ -353,12 +353,101 @@
 								</div>
 							</div>
 						</li>
-						<li><a href="#">TV & Appiliantion <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#">Men <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#">Women <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#">Baby & Kids <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#">Home & Funiture <i class="fa fa-angle-down"></i></a></li>
-						<li><a href="#">Sport, Book & More <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">TV & Appiliantion</span> <i class="fa fa-angle-down"></i></a></li>
+						<li>
+							<a href="#">
+								<span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-angle-down"></i>
+							</a>
+							<div class="menu-sub">
+								<div class="sub-row">
+									<ul class="sub-items">
+										<li class="title"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span> <i class="fa fa-caret-right"></i></li>
+										<li><a href="view-product-by-category.html"><span class="custom-wrap-1line">test add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào :vtest add thêm level 3 sau khi đã có sản phẩm ở level 2, đặt 1 cái tên thật là dài là dài để xem a Hùng hiên thị ra làm sao nào</span></a></li>
+										<li><a href="view-product-by-category.html">Fomal shoes</a></li>
+										<li><a href="view-product-by-category.html">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+								<div class="sub-row row2">
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Men grooming <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+									<ul class="sub-items">
+										<li class="title">Footwear <i class="fa fa-caret-right"></i></li>
+										<li><a href="#">Sport shoes</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters</a></li>
+										<li><a href="#">Fomal shoes</a></li>
+										<li><a href="#">Sadals & Floaters </a></li>
+									</ul>
+								</div>
+							</div>
+						</li>
+						<li><a href="#"><span class="custom-wrap-1line">Women</span> <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Baby & Kids</span> <i class="fa fa-angle-down"></i></a></li>
+						<li><a href="#"><span class="custom-wrap-1line">Home & Funiture</span> <i class="fa fa-angle-down"></i></a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
