3B - update chat box - move product to chat box

--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -779,17 +779,6 @@
 						</aside>
 
 						<main>
-							<header>
-								<img src="assets/images/img29.jpg" class="object-fit pull-left">
-								<div class="p-info pull-left">
-									<div class="name">Korean Style Coat - High Quality Product </div>
-									<div class="price">
-										<span class="txt-red">$146,99</span>
-										<span class="sale">$180,00</span>
-									</div>
-								</div>
-								<div class="clearfix"></div>
-							</header>
 							<div class="content-chat">
 								<ul class="cus-scroll">
 									<li class="me">
@@ -815,6 +804,41 @@
 											What're you doing?
 										</div>
 										<div class="clearfix"></div>
+									</li>
+									<li class="me">
+										<div class="message">
+											<div class="sent-product">
+												<img src="assets/images/img29.jpg" class="object-fit pull-left">
+												<div class="p-info pull-left">
+													<div class="name custom-wrap-1line">Korean Style Coat - High Quality Product </div>
+													<div class="price">
+														<span class="txt-red">$146,99</span>
+														<span class="sale">$180,00</span>
+													</div>
+												</div>
+												<div class="clearfix"></div>
+											</div>
+											<div class="clearfix"></div>
+										</div>
+									</li>
+									<li class="you">
+										<div class="ava pull-left">
+											<img src="assets/images/img30.jpg" class="object-fit">
+										</div>
+										<div class="message">
+											<div class="sent-product">
+												<img src="assets/images/img29.jpg" class="object-fit pull-left">
+												<div class="p-info pull-left">
+													<div class="name custom-wrap-1line">Korean Style Coat - High Quality Product </div>
+													<div class="price">
+														<span class="txt-red">$146,99</span>
+														<span class="sale">$180,00</span>
+													</div>
+												</div>
+												<div class="clearfix"></div>
+											</div>
+											<div class="clearfix"></div>
+										</div>
 									</li>
 									<li class="time">
 										<span>20:41  2020 - 10 - 10</span>
