3B - update status user

--- a/3B-WEB/flash-sale.html
+++ b/3B-WEB/flash-sale.html
@@ -704,7 +704,8 @@
 											<span class="msg-unread">10</span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
+											<h3 class="name">Prénom Nom <span class="status">Online 6' ago</span></h3>
+
 											<h4 class="msg unread">Buzz</h4>
 										</div>
 										<div class="clearfix"></div>
@@ -717,7 +718,7 @@
 											<span class="status green"></span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
+											<h3 class="name">Prénom Nom <span class="status">Online now</span></h3>
 											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
@@ -730,7 +731,7 @@
 											<span class="status green"></span>
 										</div>
 										<div class="messenger">
-											<h3 class="name">Prénom Nom</h3>
+											<h3 class="name">Prénom Nom <span class="status">Online now</span></h3>
 											<h4 class="msg">You: good product</h4>
 										</div>
 										<div class="clearfix"></div>
